--- a/style.css
+++ b/style.css
@@ -32,9 +32,9 @@ body{
 }
 
 h2{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Hammersmith One", serif;
     font-size: 5vw;
-    font-weight: bold;
+    font-weight: normal;
     color: black;
     text-shadow: -5px 5px 5px rgba(0, 0, 0, 0.39);
     margin: 0;
