--- a/style.css
+++ b/style.css
@@ -144,6 +144,12 @@ h2 {
         margin: 0;
       
     } 
+    .datos p{
+        font-weight: normal;
+        font-size: 24px;
+        text-align: justify;
+    }
+    
 }
 
 @media (max-width: 404px) {
