--- a/style.css
+++ b/style.css
@@ -163,14 +163,12 @@ h2 {
     transition-delay: 200ms;
 }
 
-.funciones .penta div:nth-child(3) img{
-    background: #A1A7B5;
-}
-.Log{
-    margin-top: 70px;
+.funciones .penta div:nth-child(3) .Log{
     width: 100px;
-    fill: white;
+    fill: rgb(255, 255, 255);
+    margin-top: 100px;
 }
+
 
 .funciones .penta div:nth-child(2){
     margin-top: 135px;
@@ -180,10 +178,14 @@ h2 {
 .funciones .penta div:nth-child(2) p{
     font-family: "Glory", serif; 
     font-size: 20px;
-    margin-top: 135px;
     rotate: 180deg;
     transition-delay: 300ms;
-    margin: 70px;
+    margin: 50px 70px 2px 70px;
+}
+.funciones .penta div:nth-child(2) .Log{
+    width: 100px;
+    fill: rgb(19, 34, 56);
+    margin: 15px;
 }
 
 .funciones .penta div:nth-child(4){
@@ -192,12 +194,49 @@ h2 {
     transition-delay: 300ms;
 }
 
+.funciones .penta div:nth-child(4) p{
+    font-family: "Glory", serif; 
+    font-size: 20px;
+    rotate: 180deg;
+    transition-delay: 300ms;
+    margin: 50px 70px 2px 70px;
+}
+.funciones .penta div:nth-child(4) .Log{
+    width: 100px;
+    fill: rgb(19, 34, 56);
+    margin: 15px;
+}
+
 .funciones .penta div:nth-child(1){
     transition-delay: 500ms;
 }
 
+.funciones .penta div:nth-child(1) p{
+    font-family: "Glory", serif; 
+    font-size: 20px;
+    transition-delay: 300ms;
+    margin: 10px 70px 50px 70px;
+}
+.funciones .penta div:nth-child(1) .Log{
+    width: 100px;
+    fill: rgb(19, 34, 56);
+    margin: 70px 70px 10px 70px;
+}
+
 .funciones .penta div:nth-child(5){
     transition-delay: 500ms;
+}
+
+.funciones .penta div:nth-child(5) p{
+    font-family: "Glory", serif; 
+    font-size: 20px;
+    transition-delay: 300ms;
+    margin: 10px 70px 50px 70px;
+}
+.funciones .penta div:nth-child(5) .Log{
+    width: 100px;
+    fill: rgb(19, 34, 56);
+    margin: 70px 70px 10px 70px;
 }
 
 @media (max-width: 1532px){
