--- a/style.css
+++ b/style.css
@@ -546,7 +546,23 @@ h2 {
     font-weight: normal;
     font-size: 40px;
     text-decoration: underline;
+    margin: 50px;
 }
+
+.caja{
+    width: 100vw;
+    margin-bottom: -3px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+.caja svg{
+    width: 100%;
+    transform: rotate(180deg);
+    filter: drop-shadow(7px -5px 2px rgba(0, 0, 0, 0.404));
+    z-index: -1;
+}
+
 
 .acerca .dispositivos{
     display: flex;
@@ -555,10 +571,72 @@ h2 {
     flex-direction: column;
     background: #222222;
     width: 100vw;
-    height: 70vh;
+    height: 100vh;
+    animation: colorChange 4s linear infinite;
 }
-.dispositivos svg{
-    top: 0px;
+
+.cubo{
+    position: relative;
+    width: 200px;
+    height: 50px;
+    transform-style: preserve-3d;
+    animation: rodar 20s linear infinite;
+}
+
+.cubo .panel{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+}
+
+.cubo .panel span{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    background: linear-gradient(#101924,rgb(73, 119, 245));
+    transform: rotateY(calc(90deg * var(--i))) translateZ(100px);
+}
+
+.top{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 200px;
+    height: 200px;
+    background: #101924;
+    transform-style: preserve-3d;
+    transform: rotateX(90deg) translateZ(100px);
+}
+
+.top::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 200px;
+    height: 200px;
+    background: #101924;
+    transform: translateZ(-100px);
+    opacity: 0.7;
+}
+
+.caja2{
+    width: 100vw;
+    margin-top: -3px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+.caja2 svg{
+    width: 100%;
+    filter: drop-shadow(-7px 5px 3px rgba(0, 0, 0, 0.404));
+    z-index: -1;
 }
 
 /*Animaciones*/
@@ -684,8 +762,8 @@ h2 {
     nav{
         z-index: 100;
         position: fixed;
-        top: 10%;
-        right: 42.5%;
+        top: 12%;
+        right: 43%;
          cursor: url('./img/mano.png'), auto;
         transform: rotate(-45deg);
     }
@@ -754,7 +832,7 @@ h2 {
 @keyframes deslizar{
     from{
         opacity: 0;
-        transform: translateX(-200px);
+        transform: translateX(-204000px);
     }
     
     to{
@@ -777,6 +855,20 @@ h2 {
 
 }
 
+@keyframes escala{
+    from{
+        opacity: 0;
+        transform: translateY(300px);
+    }
+    
+    to{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+
+}
+
+
 .nombre{
     view-timeline-name: --nombre;
     view-timeline-axis: block;
@@ -797,4 +889,33 @@ h2 {
 
     animation-range: entry 15% cover 30%; 
     animation-fill-mode: both;
+}
+
+.cont{
+    view-timeline-name: --caja;
+    view-timeline-axis: block;
+
+    animation-timeline: --caja;
+    animation-name: escala;
+
+    animation-range: entry 30% cover 40%; 
+    animation-fill-mode: both;
+}
+
+@keyframes rodar{
+    0%{
+        transform: rotateX(-30deg) rotateY(0deg);
+    }
+    100%{
+        transform: rotateX(-30deg) rotateY(360deg);
+    }
+}
+
+@keyframes colorChange{
+    0%, 100%{
+        filter: hue-rotate(270deg);
+    }
+    50%{
+        filter: hue-rotate(360deg);
+    }
 }
