--- a/style.css
+++ b/style.css
@@ -566,15 +566,31 @@ h2 {
 
 .acerca .dispositivos{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
     background: #222222;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     animation: colorChange 4s linear infinite;
 }
 
+.dispositivos h1{
+    margin: 0;
+    font-size: 40px;
+    color: #EAECEE;
+    text-decoration: none;
+}
+
+.cubos{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 10px 50px 50px 50px;
+    height: 70%;
+    flex-wrap: wrap;
+    gap: 100px;
+}
 .cubo{
     position: relative;
     width: 200px;
@@ -612,6 +628,16 @@ h2 {
     background: #101924;
     transform-style: preserve-3d;
     transform: rotateX(90deg) translateZ(100px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.top i{
+    font-size: 100px;
+    color: rgb(73, 119, 245);
+    
 }
 
 .top::before{
@@ -623,7 +649,11 @@ h2 {
     height: 200px;
     background: #101924;
     transform: translateZ(-100px);
-    opacity: 0.7;
+    opacity: 0.3;
+    box-shadow: 0 0 9vw rgb(73, 119, 245, 0.2),
+    0 0 10vw rgb(73, 119, 245, 0.4),
+    0 0 18vw rgb(73, 119, 245, 0.6),
+    0 0 22vw rgb(73, 119, 245, 0.8);
 }
 
 .caja2{
@@ -789,6 +819,12 @@ h2 {
     .nav-content span a{
         text-decoration: none;
         transform: rotate(45deg);
+    }
+}
+
+@media (max-width: 600px){
+    .acerca .dispositivos{
+        padding-bottom: 200px;
     }
 }
 
