--- a/style.css
+++ b/style.css
@@ -576,17 +576,22 @@ h2 {
 }
 
 .dispositivos h1{
-    margin: 0;
+    margin: 0px;
     font-size: 40px;
     color: #EAECEE;
     text-decoration: none;
+}
+
+.lema span{
+    font-family: "Hammersmith One", serif;
+    color: #72b4ff;
 }
 
 .cubos{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin: 10px 50px 50px 50px;
+    margin: 10px 20px 50px 20px;
     height: 70%;
     flex-wrap: wrap;
     gap: 100px;
