--- a/style.css
+++ b/style.css
@@ -784,7 +784,7 @@ h2 {
 /*Acerca de*/
 .acerca{
     text-align: center;
-    width: 100%;
+    width: 100vw;
     font-family: "Glory", serif; 
     margin-top: 100px;
     display: flex;
@@ -801,7 +801,7 @@ h2 {
 }
 
 .caja{
-    width: 100vw;
+    width: 100%;
     margin-bottom: -3px;
     display: flex;
     flex-direction: row;
@@ -979,7 +979,7 @@ h2 {
 }
 
 .caja2{
-    width: 100vw;
+    width: 100%;
     margin-top: -3px;
     display: flex;
     flex-direction: row;
@@ -990,6 +990,81 @@ h2 {
     filter: drop-shadow(-7px 5px 3px rgba(0, 0, 0, 0.404));
     z-index: -1;
 }
+
+.multimedia{
+    text-align: center;
+    width: 100%;
+    font-family: "Glory", serif; 
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.multimedia h1{
+    font-weight: normal;
+    font-size: 40px;
+    text-decoration: underline;
+    margin: 50px 50px 10px 50px;
+}
+
+/*Footer*/
+
+.footer{
+    text-align: center;
+    width: 100%;
+    font-family: "Glory", serif; 
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #212329;
+    min-height: 100px;
+    box-shadow: 0px -9px 10px rgba(0, 0, 0, 0.5);
+}
+
+.pie{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 60px;
+}
+
+.social i{
+    color: white;
+    font-size: 40px;
+    margin: 20px;
+}
+
+.pie img{
+    margin: 50px 20px 30px 20px;
+    filter: drop-shadow(-0px 9px 10px rgb(0, 0, 0));
+}
+
+.links{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    flex-wrap: wrap;
+    margin: 30px 0;
+    padding: 0;
+}
+
+.links li{
+    list-style: none;
+    width: 100px; 
+    text-align: center;
+}
+
+.links li a{
+    text-decoration: none;
+    color: #ffffff;
+}
+
 
 /*Animaciones*/
 
